# KHUSLA_test

./: A.txt  B.txt  Bx.txt  By.txt  COORDINATE_FRAME_FIX.md  frames_2025-09-07_22.22.59.gv  frames_2025-09-07_22.29.52.gv  frames_2025-09-12_14.23.52.gv  frames_2025-09-12_15.01.50.gv  frames_2025-09-12_16.20.18.gv  frames_2025-09-12_19.14.15.gv
install/: local_setup.sh  setup.sh
install/camera_perception_pkg/share/camera_perception_pkg/: package.sh
install/debug_pkg/lib/debug_pkg/: gps_path_visualizer_node  pp_preview_viz  yolo_visualizer_node
install/debug_pkg/share/debug_pkg/: package.sh
install/decision_making_pkg/share/decision_making_pkg/: package.sh
install/gps_path/lib/gps_path/: gps_centerline_node
install/gps_path/share/gps_path/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gps_path/share/gps_path/launch/: gps_centerline.launch.py
install/interfaces_pkg/share/interfaces_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/interfaces_pkg/share/interfaces_pkg/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  interfaces_pkgConfig-version.cmake  interfaces_pkgConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/interfaces_pkg/share/interfaces_pkg/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/interfaces_pkg/share/interfaces_pkg/msg/: BoundingBox2D.idl  BoundingBox2D.msg  BoundingBox3D.idl  BoundingBox3D.msg  Detection.idl  Detection.msg  DetectionArray.idl  DetectionArray.msg  KeyPoint2D.idl  KeyPoint2D.msg  KeyPoint2DArray.idl  KeyPoint2DArray.msg  KeyPoint3D.idl  KeyPoint3D.msg  KeyPoint3DArray.idl  KeyPoint3DArray.msg  LaneInfo.idl  LaneInfo.msg  Mask.idl  Mask.msg  MotionCommand.idl  MotionCommand.msg  PathPlanningResult.idl  PathPlanningResult.msg  Point2D.idl  Point2D.msg  Pose2D.idl  Pose2D.msg  TargetPoint.idl  TargetPoint.msg  Vector2.idl  Vector2.msg
install/lidar_perception_pkg/share/lidar_perception_pkg/: package.sh
install/mobile_robot/lib/mobile_robot/: posev_to_model_pose.py  twist_to_ackermann_fixed.py  vehicle_interface.py  worldpose_to_navsat.py
install/mobile_robot/share/mobile_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/mobile_robot/share/mobile_robot/cmake/: mobile_robotConfig-version.cmake  mobile_robotConfig.cmake
install/mobile_robot/share/mobile_robot/environment/: ament_prefix_path.dsv  path.dsv
install/mobile_robot/share/mobile_robot/launch/: gazebo_model.launch.py
install/mobile_robot/share/mobile_robot/model/: robot.gazebo  (+1 more)
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/serial_communication_pkg/share/serial_communication_pkg/: package.sh
install/urdf_test_pkg/share/urdf_test_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/debug_pkg/: package.xml  setup.py
src/debug_pkg/debug_pkg/: pp_preview_viz.py
src/decision_making_pkg/: package.xml
src/decision_making_pkg/decision_making_pkg/: path_planner_node.py
src/gps_path/: setup.cfg  setup.py
src/mobile_robot/: CMakeLists.txt  package.xml
src/mobile_robot/launch/: coordinate_debug.launch.py  gazebo_model.launch.py
src/mobile_robot/model/: robot.gazebo  robot.xacro
src/mobile_robot/parameters/: bridge_parameters.yaml  ekf_global.yaml  ekf_local.yaml  frames_2025-09-05_16.20.59.gv  navsat.yaml
src/mobile_robot/scripts/: coordinate_validation_test.py  frame_alignment_debug.py  imu_cov_injector.py  odom_to_navsat.py  posev_to_model_pose.py  steering_pot_emulator.py  twist_to_ackermann_fixed.py  vehicle_interface.py  wheel_odom_diagnostic.py  worldpose_to_navsat.py
src/mobile_robot/worlds/: lane_markers.sdf  my_world.sdf
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/launch/: display.launch.py
src/my_robot_description/urdf/: my_car.urdf
src/urdf_test_pkg/: CMakeLists.txt  package.xml
src/urdf_test_pkg/launch/: display.launch.py
src/urdf_test_pkg/urdf/: test_box.urdf
(+285 files in other folders)
