<?xml version="1.0"?>
<package format="3">
  <name>gps_path</name>
  <version>0.0.1</version>
  <description>Publish centerline Path from left/right lane CSVs</description>
  <maintainer email="dh08080@khu.ac.kr">daehyeon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>       <!-- Header -->
  <exec_depend>nav_msgs</exec_depend>       <!-- Path -->
  <exec_depend>geometry_msgs</exec_depend>  <!-- PoseStamped -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>